# Jarvis

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/: active-constraints.md  settings.json  wrap-probe.md
android/: build.gradle.kts
build-review/: 2026-06-05-trustnet-fix-downstream-ledger.md  2026-06-05-trustnet-fix-plan.md  2026-06-05-trustnet-refreeze-decisions.md  2026-06-05-trustnet-refreeze-delta-downstream.md  2026-06-07-phase3-build-log.md  2026-06-10-deep-audit.md  2026-06-10-final-audit-report.md  2026-06-10-rendered-ux-audit.md  2026-06-12-plan4b-recon.md  2026-06-12-plan4b6-pm-rulings.md  2026-06-12-plan6-recon.md  2026-06-12-rtk-calibration-verdict.md  2026-06-13-planV-viz-families-recon.md  2026-06-14-family3-matrix-grid-build-spec.md  2026-06-15-figure-quality-diagnosis.md  2026-06-15-master-plan-audit.md  2026-06-15-master-plan-v2-reaudit.md  2026-06-15-overnight-decision-log.md  2026-06-15-teaching-pipeline-council-BRIEF.md  2026-06-15-teaching-pipeline-council-JUDGE.md  2026-06-15-teaching-pipeline-council-VERDICTS.md  2026-06-15-wrap-audit.md  2026-06-16-frame-gate-red-green-demo.md  2026-06-16-hermes-self-learning-deep-dive.md  2026-06-16-vision-bench-design-spec.md  2026-06-16-vision-judge-experiment.md  2026-06-17-family7-oop-class-diagram-amendment.md  2026-06-18-donor-mergesort-content.txt  impeccable-calibration-2026-06-12.json  (+6 more)
daemon/: Cargo.toml
daemon/src/: effector.rs  hmac_auth.rs  kill_switch.rs  main.rs  nonce_cache.rs  path_blocklist.rs
(+1638 files in other folders)
