[package]
name = "jarvis-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Corgi <victor.vasiloi@gmail.com>"]
description = "Tutor Layer B1 — local effector daemon. 127.0.0.1-only, HMAC-gated."
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", default-features = false, features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }
enigo = "0.2"
dirs = "5"

[dev-dependencies]
hex-literal = "0.4"

[profile.release]
opt-level = 3
strip = true
lto = "thin"

[[bin]]
name = "jarvis-daemon"
path = "src/main.rs"
